2010-03-11  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/MLPSolver.hpp: Fixing bug about naf in replacedModuleAtoms

2010-03-08  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Converted comp from recursion into loop. 
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding an example about how to compare the cardinality between sets.
	* examples/module-Cardinality.hex: Likewise.

2010-03-07  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>


	* include/dlvhex/PredicateTable.hpp: Output the answer set in a new format.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Adding S in the instantiation, remove T from M (before call instatiation). 
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding an example about reachability and test non-ground module atom.
	* examples/module-Reachability.hex: Likewise.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing predicate arity and user_pred_tuple.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing module atom.

	* testsuite/TestMLPSolver.cpp: Adding test cases for more than one module call in one module.
	* examples/module1-Two.hex: Likewise.
	* examples/module2-Two.hex: Likewise.

2010-03-05  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Logger.hpp: Cleaning some printing Information.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding more testcases.
	* examples/module-Inconsistent.hex: Likewise.
	* examples/module-Not-ic-Stratified.hex: Likewise.
	* examples/module1-Big.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Giving return value whether ic-stratified or not.
