@@ -1,0 +1,5 @@
+#module(p1,[]).
+a :- @p2[]::b.  
+
+#module(p2,[]).
+b :- @p1[]::a.
